tests/samples/negative/visibility/private_qualified_function.ax
module private_qualified_function;

import samplelib.visibility as vis;

fn main() -> i32 {
    return vis::add_secret(1);
}
